# Stock-Researcher-Realtime

./: .env.example  .gitignore  QUICKSTART.md  QWEN.md  README.md  UV.md  prompt.md  pyproject.toml  requirements.txt
.qwen/agents/: Coder.md
config/: README.md  settings.yaml.example
config/prompts/: README.md  research_system.txt
data/: README.md  sample_article.txt  sample_report.md  sample_sources.json
examples/: browser_example.py  reasoning_example.py  usage_examples.py
src/: __init__.py  main.py
src/agents/: __init__.py  research_agent.py
src/chains/: __init__.py  router_chain.py  sequential_chain.py  transform_chain.py
src/tools/: __init__.py  browser_tool.py  cite_tool.py  search_tool.py  summarize_tool.py
src/utils/: __init__.py  config.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_agents.py  test_browser_tool.py  test_chains.py  test_tools.py  test_utils.py
