[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-assistant"
version = "0.1.0"
description = "An Intelligent Research Assistant built with LangChain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Portfolio Project", email = "portfolio@example.com"}
]
keywords = [
    "langchain",
    "research",
    "ai",
    "llm",
    "agent",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core LangChain dependencies
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    # LLM Providers
    "openai>=1.10.0",
    # HTTP Client (for OpenRouter and custom API calls)
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    # Vector stores and embeddings
    "chromadb>=0.4.0",
    # Web search, scraping, and browsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "readability-lxml>=0.8.1",
    "duckduckgo-search>=4.0.0",
    # Data processing
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    # Logging and monitoring
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    # Code formatting
    "black>=23.0.0",
    # Linting
    "ruff>=0.1.0",
    # Type checking
    "mypy>=1.0.0",
]
# Optional vector store dependencies
vectorstore = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
]
# Alternative LLM providers
anthropic = [
    "anthropic>=0.8.0",
]
all = [
    "research-assistant[dev,vectorstore,anthropic]",
]

[project.urls]
Homepage = "https://github.com/username/research-assistant"
Documentation = "https://github.com/username/research-assistant#readme"
Repository = "https://github.com/username/research-assistant.git"

[project.scripts]
research-assistant = "src.main:main"

# Dependency groups (PEP 735)
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
